deploy/k8s/07-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cenotoo-api
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cenotoo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cenotoo
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
      nodePort: 30080
